<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_row"
    android:layout_width="fill_parent"
    android:layout_height="90dp"
    android:background="@drawable/border"
    android:onClick="openChild"
    android:orientation="horizontal"
    android:padding="5dip" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/arrow_description"
        android:src="@drawable/arrow" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/default_title"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        android:gravity="center_vertical"
        android:typeface="sans" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:text="@string/default_location"
        android:textColor="#10bcc9"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:text="@string/default_price"
        android:textColor="#10bcc9"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/imageView1"
        android:text="@string/default_date"
        android:textColor="#10bcc9"
        android:textSize="14sp" />

</RelativeLayout>